# playground

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  game.js  index.html  style.css
.claude/: ralph-loop.local.md
chromium-sync/: README.md  pyproject.toml  spec.md
chromium-sync/src/chromium_sync/: __init__.py  auth.py  cache.py  client.py  crypto.py  local.py  server.py
chromium-sync/src/chromium_sync/proto/: __init__.py
chromium-sync/tests/: __init__.py  test_auth.py  test_crypto.py
clarvis/: .env.example  CHANGELOG.md  CLAUDE.md  NOTES.md  README.md  SPEC.md  package-lock.json  package.json  start.sh
clarvis-old/: .gitignore  package-lock.json  spec.md
clarvis-old/public/: index.html
clarvis-old/server/: api.js  auth.js  persistence.js
clarvis/public/: index.html  style.css
clarvis/server/: api.js  auth.js  config.js  config.test.js  index.js  permissions.js  sdk-bridge.js  sessions.js  ws-handler.js  ws-hub.js
claude-code-game/: CHANGELOG.md  CLAUDE.md  DEVNOTES.md  IMPLEMENTATION_PLAN.md  game.js  index.html  package-lock.json  package.json  style.css
claude-code-game/dev/: CUT_CONTENT.md  GAMEPLAY_IDEAS.md  GAME_DESIGN.md  GRAND_ARC.md  MECHANICS.md  NARRATIVE.md  NARRATIVE_DESIGN.md  thoughts.md
claude-code-game/js/: actions.js  events.js  main.js  prs.js  render.js  save.js  state.js  tech-tree.js  upgrades.js
claude-code-game/tools/: tech-tree-editor.html
imagine/.claude-plugin/: plugin.json
tab-overview-extension/: background.js  manifest.json  overview.css  overview.html  overview.js  popup.css  popup.html  popup.js
(+20 files in other folders)
